<resources>
    <string name="app_name">gnatenko_olga_task1</string>

    <string name="category">Communal services</string>
    <string name="status">In Progress</string>
    <string name="label_created">Created at</string>
    <string name="date_created">Feb 25, 2016</string>
    <string name="label_registered">Registered</string>
    <string name="date_registered">Feb 26, 2016</string>
    <string name="label_resolve">Resolve by</string>
    <string name="date_resolve">Feb 29, 2016</string>
    <string name="label_responsible">Responsible</string>
    <string name="org_responsible">Dnipropetrovsk MVC</string>
    <string name="description">There is an open hatchway near the street banner; it is located close to the place where trams 18 and 19 turn from Donetsk highway to Mira avenue</string>
    <string name="code" translatable="false">CE-1257218</string>

    <string-array name="imageList">
        <item>http://dailykitten.com/wp-content/uploads/2016/03/Autumn-32016-400x320.jpg</item>
        <item>http://dailykitten.com/wp-content/uploads/2016/03/20160318_080638-400x320.jpg</item>
        <item>http://dailykitten.com/wp-content/uploads/2016/03/image2-400x320.jpeg</item>
        <item>http://dailykitten.com/wp-content/uploads/2016/03/20160108_2050151-400x320.jpg</item>
        <item>http://dailykitten.com/wp-content/uploads/2016/03/1447880799856-400x320.jpg</item>
    </string-array>
</resources>
